--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,6 @@
 <!-- It is not recommended to modify this code, unless you are a Pro-->
 <!-- Lastly modified by Hanlin CAI in 2023/04/26 -->
+<!-- Adopted by Sanath N U in 2024-->
 
 <meta charset="utf-8">
 <title>{% if page.title %}{{ page.title }} &#8211; {% endif %}{{ site.title }}</title>
